--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <title>Grand - Event and Conference Template</title>
 
     <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <!-- Icon -->
     <link rel="stylesheet" type="text/css" href="assets/fonts/line-icons.css">
@@ -20,7 +20,7 @@
     <!-- Animate -->
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
     <!-- Main Style -->
-    <!--<link rel="stylesheet" type="text/css" href="assets/css/main.css"> -->
+    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <!-- Responsive Style -->
     <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
