--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,16 @@
     <script src="assets/js/form-validator.min.js"></script>
     <script src="assets/js/contact-form-script.min.js"></script>
 
-
+	<script>
+		$(document).ready(function(){
+		   setTimeout(function(){
+			  PopUp();
+		   },1000); // 5000 to load it after 5 seconds from page load
+		   function PopUp(){
+				document.getElementById('div_popupbanner').style.display="block"; 
+			}
+		});
+	</script>
 
 </body>
 
