--- a/src/index.html
+++ b/src/index.html
@@ -48,16 +48,24 @@
     <script src="assets/js/form-validator.min.js"></script>
     <script src="assets/js/contact-form-script.min.js"></script>
 
-	<script>
-		$(document).ready(function(){
-		   setTimeout(function(){
-			  PopUp();
-		   },1000); // 5000 to load it after 5 seconds from page load
-		   function PopUp(){
-				document.getElementById('div_popupbanner').style.display="block"; 
-			}
-		});
-	</script>
+    <script>
+            $(document).ready(function(){
+               setTimeout(function(){
+                  PopUp();
+               },1000); // 5000 to load it after 5 seconds from page load
+               function PopUp(){
+                    document.getElementById('div_popupbanner').style.display="block"; 
+                }
+
+                $("#faqex1").on("hide.bs.collapse", function(){
+                    $("#faqtoggle").html('<p style="display: inline;font-size: 20px;cursor: pointer;" >MORE</p>&nbsp; <i style="font-size: 20px;" class="fa fa-angle-double-down"></i>');
+                });
+                $("#faqex1").on("show.bs.collapse", function(){
+                    $("#faqtoggle").html('<p style="display: inline;font-size: 20px;cursor: pointer;" >LESS</p>&nbsp; <i style="font-size: 20px;" class="fa fa-angle-double-up"></i>');
+                });
+
+            });
+    </script>
 
 </body>
 
