--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,27 @@
                 $("#faqtoggle").html('<p style="display: inline;font-size: 20px;cursor: pointer;" >LESS</p>&nbsp; <i style="font-size: 20px;" class="fa fa-angle-double-up"></i>');
             });
 
+            $("#amit_burman").on("hide.bs.collapse", function() {
+                $("#amit_toggle").html('<span style="color:blue;">Read more</span>');
+            });
+            $("#amit_burman").on("show.bs.collapse", function() {
+                $("#amit_toggle").html('<span style="color:blue;">Less</span> ');
+            });
+
+            $("#pranav_bagai").on("hide.bs.collapse", function() {
+                $("#pranav_toggle").html('<span style="color:blue;">Read more</span>');
+            });
+            $("#pranav_bagai").on("show.bs.collapse", function() {
+                $("#pranav_toggle").html('<span style="color:blue;">Less</span> ');
+            });
+
+            $("#a_g").on("hide.bs.collapse", function() {
+                $("#ag_toggle").html('<span style="color:blue;">Read more</span>');
+            });
+            $("#a_g").on("show.bs.collapse", function() {
+                $("#ag_toggle").html('<span style="color:blue;">Less</span> ');
+            });
+
         });
     </script>
 
