--- a/src/index.html
+++ b/src/index.html
@@ -85,6 +85,34 @@
                 $("#ag_toggle").html('<span style="color:blue;">Less</span> ');
             });
 
+            $("#sid_mishra").on("hide.bs.collapse", function() {
+                $("#sid_toggle").html('<span style="color:blue;">Read more</span>');
+            });
+            $("#sid_mishra").on("show.bs.collapse", function() {
+                $("#sid_toggle").html('<span style="color:blue;">Less</span> ');
+            });
+
+            $("#kunaal_b").on("hide.bs.collapse", function() {
+                $("#kunaal_b_toggle").html('<span style="color:blue;">Read more</span>');
+            });
+            $("#kunaal_b").on("show.bs.collapse", function() {
+                $("#kunaal_b_toggle").html('<span style="color:blue;">Less</span> ');
+            });
+
+            $("#kd").on("hide.bs.collapse", function() {
+                $("#kd_toggle").html('<span style="color:blue;">Read more</span>');
+            });
+            $("#kd").on("show.bs.collapse", function() {
+                $("#kd_toggle").html('<span style="color:blue;">Less</span> ');
+            });
+
+            $("#manish_t").on("hide.bs.collapse", function() {
+                $("#manish_t_toggle").html('<span style="color:blue;">Read more</span>');
+            });
+            $("#manish_t").on("show.bs.collapse", function() {
+                $("#manish_t_toggle").html('<span style="color:blue;">Less</span> ');
+            });
+
         });
     </script>
 
