--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
                 PopUp();
             }, 1000); // 5000 to load it after 5 seconds from page load
             function PopUp() {
-                //document.getElementById('div_popupbanner').style.display = "block";
+                document.getElementById('div_popupbanner').style.opacity = "1";
             }
 
             $("#faqex1").on("hide.bs.collapse", function() {
